# agentic-ci

./: .containerignore  .gitignore  .mergify.yml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  openshell-ci.md  pyproject.toml  renovate.json  requirements.txt  sitemap.xml  test_vertex_auth.py  tox.ini
.claude/skills/debug-agentic-ci/: SKILL.md
.claude/skills/debug-agentic-ci/references/: symptoms.md
.claude/skills/release-agentic-ci/: SKILL.md
.claude/skills/test-e2e-openshell/: SKILL.md
.claude/skills/test-e2e-podman/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  images-dev.yml  images-pr.yml  images.yml  publish.yml  vertex-hello.yml
api/: index.html
api/backend/: index.html
api/backends/: index.html
api/cli/: index.html
api/forge/: index.html
api/gates/: index.html
api/git/: index.html
api/harness/: index.html
api/jira/: index.html
api/log/: index.html
api/openshell/: index.html
api/otel/: index.html
api/pipeline/: index.html
api/skill/: index.html
api/skill_metadata/: index.html
api/stream/: index.html
api/verdict/: index.html
backends/openshell/: index.html
backends/podman/: index.html
configuration/: index.html
docs/: configuration.md  index.md  mlflow-traces.md  otel-architecture.md  otel-configuration.md
docs/api/: backend.md  backends.md  cli.md  forge.md  gates.md  git.md  harness.md  index.md  jira.md  log.md  openshell.md  otel.md  pipeline.md  skill.md  skill_metadata.md  stream.md  verdict.md
docs/backends/: openshell.md  podman.md
docs/image/: build.md  extending.md  index.md  skills.md
image/: index.html
image/extending/: index.html
image/skills/: index.html
images/ci/: Containerfile.openshell  Containerfile.podman
images/openshell-supervisor/: Containerfile  README.md
images/runner/claude-code/: Containerfile  Containerfile.openshell  claude-settings.json  install-plugin.py
images/runner/cursor/: Containerfile  Containerfile.openshell
images/runner/opencode/: Containerfile  Containerfile.openshell  install-skills.py  opencode.json
images/runner/shared/: AGENTS.openshell.md  AGENTS.podman.md  Containerfile.base  Containerfile.openshell-base  entrypoint.sh
mlflow-traces/: index.html
otel-architecture/: index.html
otel-configuration/: index.html
scripts/: bump-versions.py  dev-tag.py  proxy-probe.py  reproduce-proxy-hang.sh
search/: search_index.json
src/agentic_ci/: backend.py  branch.py  cli.py  config.py  container.py  credentials.py  extract.py  gates.py  gcp.py  git.py  harness.py  iterate.py  log.py  mlflow.py  otel.py  otel_collector.py  otel_summary.py  pipeline.py  plugins.py  podman.py  runner.py  setup.py  skill.py  skill_metadata.py  stream.py  verdict.py
src/agentic_ci/backends/: __init__.py  local.py  podman.py
src/agentic_ci/backends/openshell/: __init__.py  gateway.py  policy.py  provider.py  sandbox.py
src/agentic_ci/forge/: __init__.py  cli.py  github.py  gitlab.py  session.py
src/agentic_ci/jira/: __init__.py  acli.py  adf.py  client.py
tests/: test_acli_client.py  test_adf.py  test_backend.py  test_branch.py  test_cli.py  test_completion_validator.py  test_config.py  test_container.py  test_forge_cli.py  test_forge_github.py  test_forge_gitlab.py  test_forge_init.py  test_forge_session.py  test_gate_registry.py  test_gates.py  test_gcp.py  test_git.py  test_git_credentials.py  test_harness.py  test_iterate.py  test_jira_client.py  test_mlflow.py  test_openshell_provider.py  test_otel.py  test_pipeline.py  test_plugins.py  test_podman.py  test_policy.py  test_sandbox.py  test_skill.py  test_skill_extra_skills.py  test_skill_metadata.py  test_stream_claude.py  test_stream_cursor.py  test_stream_opencode.py  test_verdict.py
tests/e2e/: e2e-claude-runner.sh  e2e-cursor-runner.sh  e2e-local-runner.sh  e2e-opencode-runner.sh  e2e-openshell-sandbox.sh  test_mlflow_e2e.py
tests/fixtures/cursor/: file-read.jsonl  simple-echo.jsonl
tests/images/: shell-utils.sh  test_entrypoint.sh  test_install_plugin.sh  test_install_skills.sh
